# ALSAMidiHelper

./: CMakeLists.txt  README.md  compile_flags.txt
.cache/clangd/index/: application.cpp.7D237F17AE005E48.idx  application.hpp.08207C2A1797DF94.idx  main.cpp.4F5B529AE986C6DC.idx
app/: CMakeLists.txt  main.cpp
include/app_public/: application.hpp
src/: CMakeLists.txt  application.cpp
